--- a/main.html
+++ b/main.html
@@ -8,7 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<nav>
+	<nav class='container'>
+		
 		<ul>
 			<li>Home</li>
 			<li>About</li>
